tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__AdvancedCokeOven-AAAAAAAAAAAAAAAAAAAMHw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3103,
  "prerequisites": [
    3098
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Your power needs quadrupled since the last tier, and it's likely that you're not getting Charcoal fast enough. Instead of adding even more Coke Ovens, why not build an upgraded version of them?\n\nThe caveat is that you won't keep producing Creosote alongside the Charcoal from now on. It makes for decent power in the appropriate generators, and you might have already used it to produce Lubricant. Despite that, you can still get Creosote from processing in the next steps of this questline, so you can still get it if you need it. With that out of the way, let's move on to the Advanced Coke Oven (ACO).\n\nHow is it made? The ACO needs a lot more steps than the normal Coke Ovens, steps centered around Nether materials, cooked in the EBF and then cooled down. The cooling part is normally the Vacuum Freezer's job, as you will see later in progression, but you can't build it yet; because of that, you'll have to use IC2 coolant to finish the bricks used in the ACO. Once you've crafted all the blocks needed for this, you can put it together and start it up, to see what's different from before.\n\nThe speed of this new one is 1 Charcoal per second, or the equivalent to 90 Coke Ovens. The cost of this is the loss of the Creosote, and also that it needs fuel to work, making it so approximately 1/16 of your Charcoal is lost in this step. Fortunately, you can automate it with item pipes, and the EnderIO conduits make it even simpler. Input wood, input charcoal, output charcoal.\n\nMake one of these multis to continue. Be warned that you might need more!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Advanced Coke Oven",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3098
  ],
  "rewards": [],
  "tasks": []
}
