tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__BiodieselAlterna-AAAAAAAAAAAAAAAAAAAMGw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3099,
  "optional_prerequisites": [
    1148,
    3117
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Trees are not the only source of power for the renewable enjoyer, though. You can continue to expand your wood production to sustain yourself, but you can also avoid the Charcoal business altogether! There are some naturally-sourced, energetic oils that can be processed into a greener alternative of what oil pumping can lead you to, in this tier. While crude oil turns into Diesel, this oil turns into Biodiesel!\n\nIn general, Biodiesel has less power per bucket than Diesel, which is its main drawback, to compensate for the renewable sources. You could source both of them from plants, but Oilberries are very slow compared to the option you might use, Rape flowers or Goldfish. They are an excellent source of Seed Oil or Fish Oil, but they are also IC2 crops, so their output scales with their stats.\n\nBetween the two, Goldfish have a faster fluid extraction recipe, so they are often recommended for that reason, although it's not a dealbreaker. It's recommended that you get high-statted crops if you want to follow this route, although it is not a necessity, because there are other options that never go into these IC2 crops.\n\nHow many options are there, really? There are many, but they can be divided into 3 categories, and that's what the quest tasks focus on: IC2 crops in a Crop Manager, regular crops in a Multifarm or automatic fishing in a fish trap. All of them are sources of a biological oil, either Seed Oil or Fish Oil, which can then be processed into Biodiesel.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Biodiesel Alternative",
    "party_single_reward": null,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
