tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__BiologicalDiesel-AAAAAAAAAAAAAAAAAAAMHg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3102,
  "prerequisites": [
    3126,
    3100,
    3101
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Reacting the three chemicals from the steps before with each other, you get a highly energetic fluid that is, for most purposes, equivalent to Diesel. To burn it for power, you cannot use Steam or Gas Turbines, but instead the Combustion Generators that Diesel also uses. They are reasonably efficient, generating 90% of the EU shown in NEI per bucket of fuel, although Biodiesel has a lower fuel value than either Benzene or Diesel, but not by much. Besides the generators, you also need a big enough fuel input per tick to sustain your base, so make sure to expand your setup enough to fuel all of your other automations.\n\nBiodiesel isn't the only thing you get from this process, though. As a side product, you also get Glycerol. Do not throw this away, it will prove itself useful when making epoxy resin, and possibly in other setups, to save you some work at a later time. When using singleblock Chemical Reactors, the recipe will stop if the Glycerol output is full, a situation in which a super tank will surely come in handy.\n\nWith that said, HV holds a big upgrade to this fuel that you might want to invest in. Keep progressing to check it out!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Biological Diesel",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3126,
    3100,
    3101
  ],
  "rewards": [],
  "tasks": []
}
