tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__CBDIntoSteam-AAAAAAAAAAAAAAAAAAAMOA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3128,
  "optional_prerequisites": [
    176,
    3120
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "There are no more Diesel-related upgrades for the CBD. To continue using Combustion Generators, or the LCE, you can only make your setup bigger or upgrade energy hatches. There is, however, a more power-dense fuel that uses CBD in its recipe, but there's a catch: it's a solid fuel, to be used in steam boilers, which gives it advantages and disadvantages.\n\nEverything from this quest onwards is about those solid fuels. There are two versions, one with additional inputs over the other, and they both follow the same logic: they need to be converted to Steam, which is hard to transport, convert into EU and basically require the EV and IV Large Steam Boilers. However, the combination of these fuels and those boilers is much, much more fuel efficient than before, if you are willing to face the additional challenges in this kind of setup.\n\nHow does it generally go? If you already have CBD, you can get power from it by putting it directly in Combustion Generators. In this line, though, you need to automate Fuel Binder, add blocks of Charcoal, Coal or Coal Coke and then put the Super Fuel in a Titanium or Tungstensteel Large Boiler, where you get Superheated Steam. After that, you need an HP Steam Turbine multi, followed by a regular Steam Turbine multi, and the setup is complete.\n\nIf you want to continue, then you'll need at least one Titanium Large Boiler. Build one.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "CBD Into Steam",
    "party_single_reward": null,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
