tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__CoalOrCharcoal-AAAAAAAAAAAAAAAAAAAMPg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3134,
  "prerequisites": [
    3128
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Super Fuels are blocks of burnable material, like Coal Blocks, which they need in their crafting recipe. It doesn't have to be Coal, though: you can do Coal, Charcoal or Coal Coke, and all of them make the same amount of Super Fuel. However, the amount of fluid fuel used changes based on which kind of block you used, which poses a problem.\n\n(We will ignore Lignite Coal, since it is by far the worst option. If you want to use it, dealing with the efficiency problem is up to you.)\n\nThe problem is this: the amount of EU you save by choosing Charcoal instead of the other two is less than the amount of EU that the additional fuel can make. Basically, the most efficient option is Coal Coke, then Coal, then Charcoal. The easiest option to automate is certainly Charcoal, which means this is a choice between ease of automation and fuel efficiency. Even if you use Charcoal, you will still get more EU from the final fuel than what you used as input.\n\nCoal can be automated too, though! There are many ways to do this, but the most popular way of automating items that aren't renewable by default is usually by using either IC2 crops or Forestry bees, both of which have their own renewable Coal. If you never made progress in either of those, keep in mind that they need time and effort to give you good results, but if you have, then they are great options to make this fuel even more efficiently. Naturally, you will then turn it into Coal Coke with Pyrolyse Ovens, ACOs or ICOs.\n\nStock up on either Charcoal or Coal Coke blocks to continue.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Coal Or Charcoal",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3128
  ],
  "rewards": [],
  "tasks": []
}
