tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__CreosotesWork-AAAAAAAAAAAAAAAAAAAMJw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3111,
  "prerequisites": [
    3110
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Your old pal, Creosote Oil, is back in the game! That's right, you can get it automatically from Charcoal processing again, as you did with the first Coke Ovens, and what you can do with it is about the same. The two main purposes it has are power generation and Lubricant, which you will want to use in Cutting Machines, and will also be required in some later multiblocks like the Large Combustion Engine and the Multiblock Miner. Using a Brewery, you can add some Redstone to quickly convert this oil to Lubricant and keep it in stock for whatever machine or craft needs it.\n\nAlternatively, you can get a bit of extra power from this. The fuel value per bucket is much lower than the big three, but it still has an interesting use. When the semifluid generators were broken, and the Creosote wasn't usable in them, there were setups using two max-size LP Railcraft boilers to turn the amount you get from one DT into the EU needed to run it, making that step completely free in terms of power. There were some fine details, such as the Steam Turbines needing to all be LV for the fuel efficiency, but it'd be easier to use semifluid generators from the start. Either way, you can at least remove the EU cost from the DT from the equation, if you wish to.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Creosote's Work",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3110
  ],
  "rewards": [],
  "tasks": []
}
