tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__DirectEthylene-AAAAAAAAAAAAAAAAAAAMLA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3116,
  "prerequisites": [
    3114
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Wood Gas has a big portion of barely useful outputs, but also some hidden gems. The hardest one to get, arguably, is Ethylene, since it needs automated Sulfuric Acid alongside the Ethanol you're already getting. DTing Wood Gas is the main way to get Ethylene directly, without worrying about the acid, when it comes to renewable power. This make Polyethylene, an important plastic you've already worked with at this point.\n\nThe caveat is, of course, the small amount that you get in this recipe. Whether or not you set this process up is your choice, but it's generally useful, especially if your main Ethanol source is Wood Vinegar.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Direct Ethylene",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3114
  ],
  "rewards": [],
  "tasks": []
}
