tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__DistillingBenzen-AAAAAAAAAAAAAAAAAAAMRQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3141,
  "prerequisites": [
    3106
  ],
  "properties": {
    "auto_claim": false,
    "desc": "From Wood Tar, you can selectively filter out the energetic Benzene to use as a power source. This tar is like a fluid equivalent of the Charcoal, and it actually has a lot of useful chemicals hidden inside: to separate them, the tar needs to be heated up to a temperature that will cause some of its components to evaporate, but not others. This is fractional distillation, and the singleblock Distillery, in this case an MV one, can recover only one of the outputs of such distillation.\n\nThere is something that is worth considering, though: Benzene is not the only useful chemical that can be gotten from Wood Tar. In HV, you can get all the outputs at the same time, but right now you can only choose one. Other options that you might want are Toluene and Creosote. The former can be used to make TNT, to do Implosion Compressor crafts, and the latter is useful to make Lubricant, if you ran out of it and are not using Coke Ovens anymore.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Distilling Benzene",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3106
  ],
  "rewards": [],
  "tasks": []
}
